[package]
name = "pixelcade-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
axum = "0.7.4"
tower = "0.4.13"
sqlx = { version = "0.7.4", features = ["postgres", "uuid", "runtime-tokio-native-tls"] }
dotenvy = "0.15.7"
